# cookiecutter-modern

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/app/: cli.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
